Fix navbar (#91)
Why:

    Navbar borders were not correct
    Horizontal scroll was causing the breadcrumbs and Navbar-content to have different heights

These changes address the need by:

    Add border-bottom on breadcrumbs and navbar list
    Remove horizontal scroll from navbar

--- a/src/components/List/index.css
+++ b/src/components/List/index.css
@@ -76,6 +76,7 @@
     rgba(0, 163, 255, 0.2064) 93.31%
   );
   backdrop-filter: blur(16px);
+  border-bottom: 1px solid;
   border-left: 1px solid;
   border-image: linear-gradient(
       to right,
